# RustRAG

./: .gitignore  .rustrag.toml  .rustrag.toml.example  AGENTS.MD  AUDIT_ARCHITECTURE.md  AUDIT_PERFORMANCE.md  AUDIT_REPORT.md  AUDIT_SECURITY.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEEDBACK_FOR_DEVELOPER.md  README.md  REFACTORING_ROADMAP.md  SECURITY.md
.agents/skills/rust-rag-mcp/: OBSERVATIONS-FROM-REAL-USE.md  VERIFICATION-RESULTS.md
.github/workflows/: ci.yml
Download/: config.json
benchmarks/results/: performance-baseline-2025-06-16.md  run-history.json
crates/callgraph/: Cargo.toml
crates/callgraph/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cmd/: ask.rs  chat.rs  clean.rs  index.rs  info.rs  mod.rs  reindex.rs  symbol.rs
crates/cli/tests/: integration_tests.rs
crates/cli/tests/fixtures/: minimal_cargo.toml
crates/cli/tests/fixtures/src/: lib.rs  mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: .rustrag.toml  Cargo.toml
crates/core/benches/: indexing_bench.rs  memory_bench.rs  search_bench.rs
crates/core/src/: callgraph.rs  config.rs  constants.rs  embedding.rs  error.rs  eval.rs  indexer.rs  lib.rs  retrieval.rs  semantic_cache.rs  state.rs  tracing.rs  vector_store.rs
crates/core/tests/: mod.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  ollama_client.rs  validation.rs
crates/server/: Cargo.toml
crates/server/src/: bin.rs  chat.html  lib.rs  mcp.rs
crates/server/tests/: mcp_tests.rs  mod.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  theme.rs
crates/tui/src/ui/: editor.rs  mod.rs  transcript.rs
crates/tui/tests/: integration_tests.rs
crates/vector-store/: Cargo.toml
crates/vector-store/src/: lib.rs
