[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.9"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
