[package]
name = "rust-rag-callgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
petgraph = "0.6"
ra_ap_syntax = "=0.0.178"
rust-rag-indexer = { path = "../indexer" }
rust-rag-error = { path = "../error" }

[dev-dependencies]
tempfile = "3"
