[package]
name = "rust-rag-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
toml = "0.8"
walkdir = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
lsp-server = "0.7"
petgraph = "0.6"
ra_ap_syntax = "=0.0.178"
hf-hub = "0.3"
fastembed = { version = "=4.0.0", default-features = false, features = ["ort-download-binaries"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
