[package]
name = "rust-rag-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
toml = "0.8"
glob = "0.3"
walkdir = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
petgraph = "0.6"
ra_ap_syntax = "=0.0.178"
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"] }
fastembed = { version = "=4.0.0", default-features = false, features = ["ort-download-binaries"] }
dirs = "5"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
