[package]
name = "rust-rag-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
toml = "0.8"

# Sub-crates (re-exports)
rust-rag-indexer = { path = "../indexer" }
rust-rag-vector-store = { path = "../vector-store" }
rust-rag-embedding = { path = "../embedding" }
rust-rag-state = { path = "../state" }
rust-rag-callgraph = { path = "../callgraph" }
rust-rag-config = { path = "../config" }
rust-rag-error = { path = "../error" }

# Tracing (kept in core)
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Semantic cache deps (inline in core)
sha2 = "0.10"

# Hybrid retrieval dep
petgraph = "0.6"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "indexing_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false
