[package]
name = "rust-rag-embedding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
fastembed = { version = "=4.0.0", default-features = false, features = ["ort-download-binaries"] }
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"] }
dirs = "5"
once_cell = "1.20"
rust-rag-config = { path = "../config" }
rust-rag-error = { path = "../error" }

[dev-dependencies]
tempfile = "3"
