[package]
name = "rust-rag-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
glob = "0.3"
walkdir = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
rust-rag-config = { path = "../config" }
rust-rag-error = { path = "../error" }

[dev-dependencies]
tempfile = "3"
