[package]
name = "rust-rag-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
futures-util = { version = "0.3", features = ["async-await"] }
url = "2.5"
async-stream = "0.3"
async-trait = "0.1"
rust-rag-core = { path = "../core" }
