[package]
name = "rust-rag-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rust-rag-serve"
path = "src/bin.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-rag-core = { path = "../core" }
rust-rag-llm = { path = "../llm" }
