[package]
name = "rust-rag-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rust-rag-serve"
path = "src/bin.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7" }
http = "1"
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }
rust-rag-core = { path = "../core" }
async-stream = "0.3"

futures-util = "0.3"

rust-rag-llm = { path = "../llm" }
reqwest = "0.12"

[dev-dependencies]
tempfile = "3"
url = "2"
