[package]
name = "rust-rag-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
rust-rag-error = { path = "../error" }

[dev-dependencies]
tempfile = "3"
