[package]
name = "rust-rag-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
futures-util = "0.3"
ratatui = "0.29"
crossterm = "0.28"
once_cell = "1.20"
rust-rag-core = { path = "../core" }
rust-rag-llm = { path = "../llm" }

[dev-dependencies]
tempfile = "3"
