[package]
name = "rust-rag-vector-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
rust-rag-indexer = { path = "../indexer" }
rust-rag-error = { path = "../error" }

[dev-dependencies]
tempfile = "3"
